Fixed image height on firefox

--- a/home/static/css/styles.css
+++ b/home/static/css/styles.css
@@ -264,7 +264,6 @@ nav a {
 }
 
 .portfolioSnapshot img {
-    height: 100%;
     width: 100%;
 }
 
